--- a/Debug.qsf
+++ b/Debug.qsf
@@ -525,7 +525,10 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name ALLOW_POWER_UP_DONT_CARE OFF
 set_global_assignment -name MISC_FILE Lectures.dpf
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE src/RegisterFile.v
+set_global_assignment -name VERILOG_FILE src/PCLogic.v
+set_global_assignment -name VERILOG_FILE src/InstrFetch.v
+set_global_assignment -name VERILOG_FILE src/Decoder.v
 set_global_assignment -name SOURCE_FILE src/asm/Test2.a32
 set_global_assignment -name SOURCE_FILE src/asm/Sorter2.a32
 set_global_assignment -name VERILOG_FILE src/SignExtension.v
@@ -535,3 +538,4 @@ set_global_assignment -name VERILOG_FILE src/Project2.v
 set_global_assignment -name VERILOG_FILE src/InstMemory.v
 set_global_assignment -name SDC_FILE Timing.sdc
 set_global_assignment -name QIP_FILE PLL.qip
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
